forth/test/fail/test_cond_arity_bare_then.af
use' ../../lang.af

fun: .test_cond_arity_bare_then_fail { -- out }
  true .then 10 end
end
